k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: targeting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: 434473100946.dkr.ecr.us-east-1.amazonaws.com/targeting-service:v1.0.0
          ports:
            - containerPort: 8003
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
