k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-service-ingress
  namespace: targeting-service
spec:
  ingressClassName: nginx
  rules:
    - host: targeting-service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003
